--- a/Config/config.json
+++ b/Config/config.json
@@ -1,51 +1,52 @@
 {
-    "dns": {
+  "dns": {
     "servers": [
       {
         "address": "tcp://1.1.1.3",
         "detour": "dns"
       },
-	{
+      {
         "address": "tcp://208.67.222.123",
         "detour": "dns"
       }
     ],
     "strategy": "ipv4_only"
   },
-    "inbounds": [
+  "inbounds": [
+    {
+      "type": "vless",
+      "tag": "vless-in",
+      "listen": "::",
+      "listen_port": 443,
+      "sniff": true,
+      "sniff_override_destination": true,
+      "domain_strategy": "ipv4_only",
+      "users": [
         {
-            "type": "vless",
-            "tag": "vless-in",
-            "listen": "::",
-            "listen_port": 443,
-            "sniff": true,
-            "sniff_override_destination": true,
-            "domain_strategy": "ipv4_only",
-            "users": [
-                {
-        "uuid": "E66E8785-9284-493D-BF48-8232AA3686EA",
-            "flow": "xtls-rprx-vision"
-                }
-            ],
-            "tls": {
-                "enabled": true,
-            "server_name": "www.speedtest.net",
-                "reality": {
-                    "enabled": true,
-                    "handshake": {
-                    "server": "www.speedtest.net",
-                    "server_port": 443
-                    },
-               "private_key": "qAdSu-xtsEOlP-xfysiAdiU-NxUBWmxZ63OOnTEMFFk",
-                    "short_id": [ 
-                    "6ba85179e30d4fc2"
-                    ]
-                }
-            }
+          "uuid": "E66E8785-9284-493D-BF48-8232AA3686EA",
+          "flow": "xtls-rprx-vision"
         }
-    ],
-    "outbounds": [
-        {
+      ],
+      "tls": {
+        "enabled": true,
+        "server_name": "www.speedtest.net",
+        "reality": {
+          "enabled": true,
+          "handshake": {
+            "server": "www.speedtest.net",
+            "server_port": 443
+          },
+          "private_key": "iLYHvCMlb22F7HRbUwqmb9cRrbPs0iYjNxx7J8VDPG4",
+          //PublicKey: 26qLoiH21lBaM1kapH1jk9tabnzmQf3StKKTEZ3a3VM          
+          "short_id": [
+            "6ba85179e30d4fc2"
+          ]
+        }
+      }
+    }
+  ],
+  "outbounds": [
+    {
       "type": "direct"
     },
     {
@@ -56,7 +57,7 @@
       "type": "block",
       "tag": "block"
     }
-    ],
+  ],
   "route": {
     "rules": [
       {
